docs/0.8/_sources/api/gammapy.astro.population.FaucherKaspi2006VelocityMaxwellian.rst.txt
FaucherKaspi2006VelocityMaxwellian
==================================

.. currentmodule:: gammapy.astro.population

.. autoclass:: FaucherKaspi2006VelocityMaxwellian
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~FaucherKaspi2006VelocityMaxwellian.amplitude
      ~FaucherKaspi2006VelocityMaxwellian.bounding_box
      ~FaucherKaspi2006VelocityMaxwellian.bounds
      ~FaucherKaspi2006VelocityMaxwellian.col_fit_deriv
      ~FaucherKaspi2006VelocityMaxwellian.eqcons
      ~FaucherKaspi2006VelocityMaxwellian.fit_deriv
      ~FaucherKaspi2006VelocityMaxwellian.fittable
      ~FaucherKaspi2006VelocityMaxwellian.fixed
      ~FaucherKaspi2006VelocityMaxwellian.has_user_bounding_box
      ~FaucherKaspi2006VelocityMaxwellian.has_user_inverse
      ~FaucherKaspi2006VelocityMaxwellian.ineqcons
      ~FaucherKaspi2006VelocityMaxwellian.input_units
      ~FaucherKaspi2006VelocityMaxwellian.input_units_allow_dimensionless
      ~FaucherKaspi2006VelocityMaxwellian.input_units_equivalencies
      ~FaucherKaspi2006VelocityMaxwellian.input_units_strict
      ~FaucherKaspi2006VelocityMaxwellian.inputs
      ~FaucherKaspi2006VelocityMaxwellian.inverse
      ~FaucherKaspi2006VelocityMaxwellian.linear
      ~FaucherKaspi2006VelocityMaxwellian.meta
      ~FaucherKaspi2006VelocityMaxwellian.model_constraints
      ~FaucherKaspi2006VelocityMaxwellian.model_set_axis
      ~FaucherKaspi2006VelocityMaxwellian.n_inputs
      ~FaucherKaspi2006VelocityMaxwellian.n_outputs
      ~FaucherKaspi2006VelocityMaxwellian.name
      ~FaucherKaspi2006VelocityMaxwellian.outputs
      ~FaucherKaspi2006VelocityMaxwellian.param_names
      ~FaucherKaspi2006VelocityMaxwellian.param_sets
      ~FaucherKaspi2006VelocityMaxwellian.parameter_constraints
      ~FaucherKaspi2006VelocityMaxwellian.parameters
      ~FaucherKaspi2006VelocityMaxwellian.return_units
      ~FaucherKaspi2006VelocityMaxwellian.separable
      ~FaucherKaspi2006VelocityMaxwellian.sigma
      ~FaucherKaspi2006VelocityMaxwellian.standard_broadcasting
      ~FaucherKaspi2006VelocityMaxwellian.tied

   .. rubric:: Methods Summary

   .. autosummary::

      ~FaucherKaspi2006VelocityMaxwellian.__call__
      ~FaucherKaspi2006VelocityMaxwellian.copy
      ~FaucherKaspi2006VelocityMaxwellian.deepcopy
      ~FaucherKaspi2006VelocityMaxwellian.evaluate
      ~FaucherKaspi2006VelocityMaxwellian.n_submodels
      ~FaucherKaspi2006VelocityMaxwellian.prepare_inputs
      ~FaucherKaspi2006VelocityMaxwellian.prepare_outputs
      ~FaucherKaspi2006VelocityMaxwellian.rename
      ~FaucherKaspi2006VelocityMaxwellian.render
      ~FaucherKaspi2006VelocityMaxwellian.sum_of_implicit_terms
      ~FaucherKaspi2006VelocityMaxwellian.with_units_from_data
      ~FaucherKaspi2006VelocityMaxwellian.without_units_for_data

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: bounding_box
   .. autoattribute:: bounds
   .. autoattribute:: col_fit_deriv
   .. autoattribute:: eqcons
   .. autoattribute:: fit_deriv
   .. autoattribute:: fittable
   .. autoattribute:: fixed
   .. autoattribute:: has_user_bounding_box
   .. autoattribute:: has_user_inverse
   .. autoattribute:: ineqcons
   .. autoattribute:: input_units
   .. autoattribute:: input_units_allow_dimensionless
   .. autoattribute:: input_units_equivalencies
   .. autoattribute:: input_units_strict
   .. autoattribute:: inputs
   .. autoattribute:: inverse
   .. autoattribute:: linear
   .. autoattribute:: meta
   .. autoattribute:: model_constraints
   .. autoattribute:: model_set_axis
   .. autoattribute:: n_inputs
   .. autoattribute:: n_outputs
   .. autoattribute:: name
   .. autoattribute:: outputs
   .. autoattribute:: param_names
   .. autoattribute:: param_sets
   .. autoattribute:: parameter_constraints
   .. autoattribute:: parameters
   .. autoattribute:: return_units
   .. autoattribute:: separable
   .. autoattribute:: sigma
   .. autoattribute:: standard_broadcasting
   .. autoattribute:: tied

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: deepcopy
   .. automethod:: evaluate
   .. automethod:: n_submodels
   .. automethod:: prepare_inputs
   .. automethod:: prepare_outputs
   .. automethod:: rename
   .. automethod:: render
   .. automethod:: sum_of_implicit_terms
   .. automethod:: with_units_from_data
   .. automethod:: without_units_for_data
